// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadPreview should render FileUploadPreview with 1 uploading, 1 uploaded, and 1 failed file 1`] = `
<View
  fileUploadsLength={3}
  style={
    Array [
      Object {
        "height": 165,
        "marginHorizontal": 10,
      },
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploading",
            "type": "file",
          },
          "id": "0",
          "state": "uploading",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploaded",
            "type": "file",
          },
          "id": "1",
          "state": "uploaded",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "upload_failed",
            "type": "file",
          },
          "id": "2",
          "state": "upload_failed",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
                testID="upload-progress-indicator"
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          testID="inactive-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/reload1.png",
                }
              }
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
              testID="retry-upload-progress-indicator"
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`FileUploadPreview should render FileUploadPreview with all failed files 1`] = `
<View
  fileUploadsLength={3}
  style={
    Array [
      Object {
        "height": 165,
        "marginHorizontal": 10,
      },
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "upload_failed",
            "type": "file",
          },
          "id": "0",
          "state": "upload_failed",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "upload_failed",
            "type": "file",
          },
          "id": "1",
          "state": "upload_failed",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "upload_failed",
            "type": "file",
          },
          "id": "2",
          "state": "upload_failed",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/reload1.png",
                }
              }
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
              testID="retry-upload-progress-indicator"
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/reload1.png",
                }
              }
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
              testID="retry-upload-progress-indicator"
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/reload1.png",
                }
              }
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
              testID="retry-upload-progress-indicator"
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`FileUploadPreview should render FileUploadPreview with all uploaded files 1`] = `
<View
  fileUploadsLength={3}
  style={
    Array [
      Object {
        "height": 165,
        "marginHorizontal": 10,
      },
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploaded",
            "type": "file",
          },
          "id": "0",
          "state": "uploaded",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploaded",
            "type": "file",
          },
          "id": "1",
          "state": "uploaded",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploaded",
            "type": "file",
          },
          "id": "2",
          "state": "uploaded",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          testID="inactive-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          testID="inactive-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          testID="inactive-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`FileUploadPreview should render FileUploadPreview with all uploading files 1`] = `
<View
  fileUploadsLength={3}
  style={
    Array [
      Object {
        "height": 165,
        "marginHorizontal": 10,
      },
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploading",
            "type": "file",
          },
          "id": "0",
          "state": "uploading",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploading",
            "type": "file",
          },
          "id": "1",
          "state": "uploading",
        },
        Object {
          "file": Object {
            "name": "dummy.pdf",
            "state": "uploading",
            "type": "file",
          },
          "id": "2",
          "state": "uploading",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
                testID="upload-progress-indicator"
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
                testID="upload-progress-indicator"
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="active-upload-progress-indicator"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#ebebeb",
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/DOC.png",
                  }
                }
                style={
                  Array [
                    Object {},
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                dummy.pdf
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
              testID="remove-file-upload-preview"
            >
              X
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0,0,0,0.3)",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255,255,255,0)",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
                testID="upload-progress-indicator"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
